image error fixed

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     More</button>
             </div>
             <div class="img-container lg:max-w-[640px] rounded-xl">
-                <img src="Images/popular-tour.png" alt="">
+                <img src="./images/popular-tour.png" alt="">
             </div>
         </section>
 
@@ -256,7 +256,7 @@
                         More</button>
                 </div>
                 <div class="img-container lg:w-1/2 rounded-xl"> 
-                    <img src="Images/Group40089.png" alt="">
+                    <img src="./images/Group40089.png" alt="">
                 </div>
             </section>
         </section>
@@ -274,7 +274,7 @@
                 </form>
             </div>
             <div class="Newslatter-img-container relative lg:w-">
-                <img src="/images/newslatter-img.png" width="" height="" alt="">
+                <img src="./images/newslatter-img.png" width="" height="" alt="">
                 <div
                     class="save-money absolute text-white text-center bg-themeText w-fit py-4 px-8 rounded-xl -rotate-12 right-6 lg:right-10 bottom-10 lg:bottom-16">
                     <p class="text-base">exploreabroad.com</p>
