--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <img class="w-fit" src="./images/logo.png" alt="">
                     <h3 class="text-4xl font-extrabold">Explore <span class="text-themeText">Abroad</span></h3>
                 </div>
-                <div class="hidden lg:flex gap-x-6 font-bold mr-2">
+                <div class="hidden md:flex lg:flex justify-center items-center gap-x-6 font-bold mr-2">
                     <a id="orange" class="text-themeText" href="">Home</a>
                     <a href="">Packages</a>
                     <a href="">Testimonial</a>
@@ -51,10 +51,10 @@
                 </p>
             </div>
             <div class="flex justify-center">
-                <form class="flex flex-col lg:flex-row gap-3 p-8 rounded-lg bg-[rgba(255,255,255,0.3)] text-lg w-fit">
-                    <input class="p-3 rounded-lg w-full lg:w-44 sm:mb-3 lg:mr-3" type="text" placeholder="Where go">
-                    <input class="p-3 rounded-lg w-full lg:w-44 sm:mb-3 lg:mr-3" type="text" placeholder="When">
-                    <input class="p-3 rounded-lg w-full lg:w-44 sm:mb-3 lg:mr-3" type="text" placeholder="Select">
+                <form class="flex flex-col lg:flex-row gap-x-6 gap-y-3 p-8 rounded-lg bg-[rgba(255,255,255,0.3)] text-lg w-fit">
+                    <input class="p-3 rounded-lg w-full lg:w-44  " type="text" placeholder="Where go">
+                    <input class="p-3 rounded-lg w-full lg:w-44" type="text" placeholder="When">
+                    <input class="p-3 rounded-lg w-full lg:w-44" type="text" placeholder="Select">
                     <input class="p-3 rounded-lg w-full lg:w-44 bg-themeText text-white font-semibold" type="submit"
                         value="Find Now">
                 </form>
@@ -260,7 +260,7 @@
                 </div>
             </section>
         </section>
-        <section class="Newslatter-section flex justify-center flex-col lg:flex-row gap-8 my-24">
+        <section class="Newslatter-section flex justify-center flex-col lg:flex-row gap-x-16 gap-y-8 my-24">
             <div class="newslatter-text-container border-2 border-themeText rounded-xl p-10 lg:w-4/12">
                 <div class="newslatter-text-elements">
                     <h3 class="text-2xl font-bold mb-6">Newslatter</h3>
