added hover effect on grid images

--- a/index.html
+++ b/index.html
@@ -110,25 +110,25 @@
             </div>
 
             <div class="grid grid-cols-12 gap-3">
-                <div class="col-span-12 lg:col-span-6 min-h-64 max-h-96 bg-[#0000003b] flex justify-center items-center bg-[url('./images/maldives.png')] bg-cover bg-center bg-blend-overlay text-white text-2xl font-bold rounded-xl">
+                <div class="col-span-12 lg:col-span-6 min-h-64 max-h-96 hover:bg-[#0000003b] flex justify-center items-center bg-[url('./images/maldives.png')] bg-cover bg-center bg-blend-overlay text-white text-2xl font-bold rounded-xl">
                     Maldives
                 </div>
-                <div class="col-span-12 lg:col-span-6 min-h-64 max-h-96 bg-[#0000003b] flex justify-center items-center bg-[url('./images/indonesia.png')] bg-cover bg-center bg-blend-overlay text-white text-2xl font-bold rounded-xl">
+                <div class="col-span-12 lg:col-span-6 min-h-64 max-h-96 hover:bg-[#0000003b] flex justify-center items-center bg-[url('./images/indonesia.png')] bg-cover bg-center bg-blend-overlay text-white text-2xl font-bold rounded-xl">
                     Indonesia
                 </div>
-                <div class="col-span-12 lg:col-span-3 min-h-64 max-h-96 bg-[#0000003b] flex justify-center items-center bg-[url('./images/srilanka.png')] bg-cover bg-center bg-blend-overlay text-white text-2xl font-bold rounded-xl">
+                <div class="col-span-12 lg:col-span-3 min-h-64 max-h-96 hover:bg-[#0000003b] flex justify-center items-center bg-[url('./images/srilanka.png')] bg-cover bg-center bg-blend-overlay text-white text-2xl font-bold rounded-xl">
                     Srilanka
                 </div>
-                <div class="col-span-12 lg:col-span-5 min-h-64 max-h-96 bg-[#0000003b] flex justify-center items-center bg-[url('./images/america.png')] bg-cover bg-center bg-blend-overlay text-white text-2xl font-bold rounded-xl">
+                <div class="col-span-12 lg:col-span-5 min-h-64 max-h-96 hover:bg-[#0000003b] flex justify-center items-center bg-[url('./images/america.png')] bg-cover bg-center bg-blend-overlay text-white text-2xl font-bold rounded-xl">
                    North America
                 </div>
-                <div class="col-span-12 lg:col-span-4 min-h-64 max-h-96 bg-[#0000003b] flex justify-center items-center bg-[url('./images/kashmir.png')] bg-cover bg-center bg-blend-overlay text-white text-2xl font-bold rounded-xl">
+                <div class="col-span-12 lg:col-span-4 min-h-64 max-h-96 hover:bg-[#0000003b] flex justify-center items-center bg-[url('./images/kashmir.png')] bg-cover bg-center bg-blend-overlay text-white text-2xl font-bold rounded-xl">
                     Kashmir
                 </div>
-                <div class="col-span-12 lg:col-span-5 min-h-64 max-h-96 bg-[#0000003b] flex justify-center items-center bg-[url('./images/bangladesh.png')] bg-cover bg-center bg-blend-overlay text-white text-2xl font-bold rounded-xl">
+                <div class="col-span-12 lg:col-span-5 min-h-64 max-h-96 hover:bg-[#0000003b] flex justify-center items-center bg-[url('./images/bangladesh.png')] bg-cover bg-center bg-blend-overlay text-white text-2xl font-bold rounded-xl">
                     Bangladash
                 </div>
-                <div class="col-span-12 lg:col-span-7 min-h-64 max-h-96 bg-[#0000003b] flex justify-center items-center bg-[url('./images/bandarban.png')] bg-cover bg-center bg-blend-overlay text-white text-2xl font-bold rounded-xl">
+                <div class="col-span-12 lg:col-span-7 min-h-64 max-h-96 hover:bg-[#0000003b] flex justify-center items-center bg-[url('./images/bandarban.png')] bg-cover bg-center bg-blend-overlay text-white text-2xl font-bold rounded-xl">
                     Bandarban
                 </div>
             </div>
